force-app/main/default/objects/Consent__c/Consent__c.object-meta.xml
<CustomObject>
    <label>Consent</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>