force-app/main/default/objects/Consent__c/fields/Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Form</label>
    <referenceTo>Consent_Form__c</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>