force-app/main/default/objects/Consent__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link Client Contacts and Staff (Andersen or Affiliate) to Consents</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>