force-app/main/default/objects/Consent__c/fields/Date_Actioned__c.field-meta.xml
<CustomField>
    <fullName>Date_Actioned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Actioned</label>
    <type>Date</type>
</CustomField>