force-app/main/default/objects/Consent__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>