force-app/main/default/objects/Consent__c/fields/Signed_Name__c.field-meta.xml
<CustomField>
    <fullName>Signed_Name__c</fullName>
    <description>Field to hold the name that was entered as &apos;signature&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>