force-app/main/default/objects/Consent__c/fields/Wet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Wet_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the consent form has been signed manually (wet signature) and uploaded. Used to track forms not signed via e-signature.</description>
    <label>Wet Signed</label>
    <type>Checkbox</type>
</CustomField>